<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="damilola_okafor">Damilola Okafor</string>
    <string name="track_android">Track: Android</string>
    <string name="country_nigeria">Country: Nigeria</string>
    <string name="email">Email: damiokafor@gmail.com</string>
    <string name="phone_number">Phone Number: 08100574903</string>
    <string name="slack_username">Slack Username: @Winifred</string>
</resources>
