<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyProfile"
    android:layout_marginTop="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/mypic"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:src="@drawable/mypicture"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="415dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:text="@string/damilola_okafor"
            android:fontFamily="@font/aclonica"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/track_android"
            android:fontFamily="@font/aclonica"
            android:textColor="@android:color/black"
            android:textAppearance="?android:textAppearanceSmall"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/country_nigeria"
            android:fontFamily="@font/aclonica"
            android:textColor="@android:color/black"
            android:textAppearance="?android:textAppearanceSmall"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/email"
            android:fontFamily="@font/aclonica"
            android:textColor="@android:color/black"
            android:textAppearance="?android:textAppearanceSmall"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/phone_number"
            android:fontFamily="@font/aclonica"
            android:textColor="@android:color/black"
            android:textAppearance="?android:textAppearanceSmall"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/slack_username"
            android:fontFamily="@font/aclonica"
            android:textColor="@android:color/black"
            android:textAppearance="?android:textAppearanceSmall"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>